# app-path-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ci-local.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
src/: app_path.rs  error.rs  functions.rs  lib.rs  tests.rs  traits.rs
src/app_path/: constructors.rs  deprecated.rs  directory.rs  mod.rs  path_ops.rs  traits.rs
src/tests/: basic.rs  constructors.rs  directory_creation.rs  error_handling.rs  macros.rs  mod.rs  overrides.rs  path_manipulation.rs  traits.rs
src/tests/directory_creation/: core_methods.rs  deprecated_methods.rs  equivalence.rs  mod.rs
src/tests/traits/: comparison.rs  conversion.rs  display.rs  integration.rs  mod.rs  std_traits.rs
