[package]
name = "app-path"
version = "1.0.2"
edition = "2021"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
description = "Create file paths relative to your executable for truly portable applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DK26/app-path-rs"
homepage = "https://github.com/DK26/app-path-rs"
documentation = "https://docs.rs/app-path"
readme = "README.md"
keywords = ["filesystem", "portable", "path", "executable", "cross-platform"]
categories = ["filesystem", "development-tools"]

[dependencies]
# Zero dependencies for runtime

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
camino = { version = "1.1", features = ["serde1"] }
typed-path = "0.11.0"
